<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".ui.fragments.my_page.FrmMyPage">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:orientation="vertical"
        tools:context=".ui.fragments.my_page.FrmMyPage">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/collapsingToolbarLayoutTitle"
                app:expandedTitleGravity="center_horizontal"
                app:expandedTitleTextAppearance="@style/exToolbarLayoutTitle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <View
                        android:id="@+id/imageHolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.Toolbar>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|snap"
                    app:toolbarId="@+id/toolbar">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:visibility="gone"
                        android:id="@+id/clInteractive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:id="@+id/btnFollow"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tvNumberFollow"
                                style="@style/stMyPageH1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tvNumberFollowDes"
                                style="@style/stMyPageH1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lblFollowing"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:id="@+id/btnFollowers"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tvNumberFollowers"
                                style="@style/stMyPageH1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tvNumberFollowersDes"
                                style="@style/stMyPageH1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lblFollowers"
                                android:textColor="@color/black" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:gravity="center"
                            android:id="@+id/btnLike"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tvNumberLike"
                                style="@style/stMyPageH1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black" />

                            <ImageView
                                android:id="@+id/imgNumberLike"
                                style="@style/stMyPageH1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_like_my_page"
                                android:textColor="@color/black" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmerFrameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_gravity="center"
                            android:orientation="vertical">
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">
                                <brite.outdoor.ui.widgets.CustomShimmerPlaceholderMypage
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"/>
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </com.facebook.shimmer.ShimmerFrameLayout>



                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/glV5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/tvYourWriting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBgHome"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_14sdp"
                    android:singleLine="true"
                    android:text="@string/lblYourWriting"
                    android:textColor="@drawable/bg_text_tab_mypage"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/glV5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvArticlesSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBgHome"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_14sdp"
                    android:singleLine="true"
                    android:text="@string/lblArticlesSave"
                    android:textColor="@drawable/bg_text_tab_mypage"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/glV5"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:elevation="1dp"
                    android:layout_marginVertical="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvArticlesSave"
                    app:layout_constraintBottom_toBottomOf="@+id/tvArticlesSave"
                    android:background="#F1F1F1"
                    android:layout_height="0dp"
                    android:layout_width="1dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:elevation="@dimen/_8sdp"
            app:collapsedTarget="@id/imageHolder"
            app:layout_behavior=".ui.widgets.CollapsingImageBehavior"
            tools:ignore="MissingPrefix" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBgHome"
            android:overScrollMode="never"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcMyPage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpPosts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <brite.outdoor.ui.widgets.CustomImageButton
            android:id="@+id/btnSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/naviBottomHome"
        layout="@layout/layout_bottom_navigation_home"/>

</androidx.constraintlayout.widget.ConstraintLayout>